# ArmoniK.LinPyK

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-worker.txt  requirements.txt
.github/workflows/: build-worker.yaml
examples/: cholesky.py  gen_remote.py  solve_triangular.py
linpyk/: __init__.py  exceptions.py  worker.py
linpyk/algorithms/: __init__.py  dense.py
linpyk/backend/: __init__.py  base.py  dummy.py  gp.py
linpyk/common/: __init__.py  dto.py  opcode.py  payload.py  processing.py  result.py
linpyk/graph/: __init__.py  array.py  graph.py  nodes.py  style.py
linpyk/graph/ops/: __init__.py  blas.py  gen.py  lapack.py
linpyk/utils/: __init__.py  generators.py  graph.py
